RESOLVED FIXED47483
compile fail with gtk >= 2.22
https://bugs.webkit.org/show_bug.cgi?id=47483
Summary compile fail with gtk >= 2.22
Halton Huo
Reported 2010-10-11 00:13:18 PDT
../../WebCore/platform/graphics/gtk/FontGtk.cpp: In member function ‘void WebCore::Font::drawComplexText(WebCore::GraphicsContext*, const WebCore::TextRun&, const WebCore::FloatPoint&, int, int) const’: ../../WebCore/platform/graphics/gtk/FontGtk.cpp:234: error: ‘gdk_region_shrink’ was not declared in this scope make[1]: *** [WebCore/platform/graphics/gtk/libwebkitgtk_1_0_la-FontGtk.lo] Error 1 make[1]: Leaving directory `/home/halton/work/projects/meego/WebKit/WebKitBuild/Debug'
Attachments
Proposed patch (3.99 KB, patch)
2010-10-14 12:59 PDT, Alejandro G. Castro
mrobinson: review+
Alejandro G. Castro
Comment 1 2010-10-14 12:59:58 PDT
Created attachment 70766 [details] Proposed patch
Martin Robinson
Comment 2 2010-10-14 13:11:39 PDT
Comment on attachment 70766 [details] Proposed patch Great. If this causes issues we can re-add it with a comment explaining why it is useful.
Alejandro G. Castro
Comment 3 2010-10-15 01:34:49 PDT
Note You need to log in before you can comment on or make changes to this bug.