2010-10-15  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        compile fail with gtk >= 2.22
        https://bugs.webkit.org/show_bug.cgi?id=47483

        * platform/graphics/gtk/FontGtk.cpp: Removed the shrink operation,
        it was added long time ago and currently it is not adding any real
        area to the clip vertically, actually the gtk3 shrink version did
        not work.
        (WebCore::Font::drawComplexText):
        * platform/gtk/gtk2drawing.c: Undef the deprecation flags, this
        file is full of gtk2 stuff, and it does not seem interesting to
        upgrade because we are already creating a new version of the file
        for gtk3.

Canonical link: https://commits.webkit.org/60424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69845 268f45cc-cd09-0410-ab3c-d52691b4dbfc